2001-02-21  Pavel Cisler <pavel@eazel.com>

	* components/help/help-method.c:

	Fix broken build - add the right includes that got dropped by
	GnomeVFS header file shuffle.

2001-02-20  John Harper  <jsh@eazel.com>

	reviewed by Maciej Stachowiak  <mjs@eazel.com>

	Fixed bug where a renamed node in the tree view doesn't get
	resorted:

	* libnautilus-extensions/nautilus-ctree.c (set_node_info): if
	the ctree is in auto-sort mode, sort the branch containing the
	changed node


	Fixed a crash in the tree view when expanding nodes that have
	been moved across directories:

	* components/tree/nautilus-tree-node.c
	(nautilus_tree_node_remove_children): new function, unparents
	all children of the given node

	(nautilus_tree_node_destroy): emit a warning if the list of
	children is non-null (then call remove_children). Ideally the
	remove_children function should get called before the final
	unref of a directory node

	* components/tree/nautilus-tree-model.c
	(report_node_removed_internal): call
	nautilus_tree_node_remove_children before unref'ing the node


	Mostly fixed bug where expansion state hash table accumulates
	cruft over time (e.g. directories that no longer exist or got
	moved to locations where they can never be displayed):

	* components/tree/nautilus-tree-view.h
	(NautilusTreeViewDetails): added `view_node_to_uri_map' hash
	table. This is used to map view nodes to the URIs we believe
	they are displaying. This is necessary since by the time we
	find out about changes to nodes, the names of the underlying
	NautilusFile objects have often already been changed

	* components/tree/nautilus-tree-view.c
	(unlink_view_node_from_uri, link_view_node_with_uri,
	map_view_node_to_uri): functions accessing the new hash table

	(nautilus_tree_view_would_include_file): new function, returns
	true iff the given file may possibly appear in the tree view.
	Climbs through all parents of the file to do this

	(nautilus_tree_view_model_node_renamed_callback): only