@@ -1,3 +1,10 @@
+2001-02-21  Robey Pointer  <robey@eazel.com>
+
+	* components/services/install/nautilus-view/callbacks.c:
+	(nautilus_service_install_download_progress):
+
+	Workaround possible redundant 100% progress callback.
+
 2001-02-21  Pavel Cisler <pavel@eazel.com>
 
 	* components/help/help-method.c:
